[package]
name = "bevy-hello"
version = "0.1.0"
authors = ["Shane Lillie <ignignokterr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "bevy-hello"
path = "src/main.rs"

[dependencies]
bevy = "0.2"

[profile.release.build-override]
opt-level = 0
